Refactor: rename FormHotelEdit to FormHotel and support create + edit

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -47,3 +47,15 @@
     aspect-ratio: 1;
     background: #707070;
 }
+
+
+
+/*  */
+
+.checkbox > label {
+    display: block;
+}
+
+.checkbox > label > input {
+    margin-right: .5rem;
+}
